--- a/demo/assets/main.css
+++ b/demo/assets/main.css
@@ -1,34 +1,30 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: Arial,Times New Roman, Verdana;
-    text-decoration:none;
-}
+
 center{padding-top: 50px;}
 center p{color: #888;}
-a:visited,a:link{color: #000;}
-.top{line-height: 60px;border-bottom: 1px solid #ccc;padding: 0 10px;}
-.top h1{float: left;margin-right: 20px;}
-.top a{padding:5px;}
-a.router-link-active{color: #f63; font-weight:700;}
-.nav .nav>li>a.router-link-active {color: #563d7c;}
-.left ul{
-    padding: 0;
-    margin: 0;
-    list-style: none;
+.top{
+    border-bottom: 1px solid #ccc;
 }
-.main{margin: 0 10px;}
-.nav{    
-    width: 200px;
+.top h1{
     float: left;
-    min-height:200px;
-    background: #eee;
+    margin: 0 10px;
 }
+.top a{
+    padding:5px;
+}
+a.router-link-active{font-weight:700;}
+.nav{   
+    margin-left: 10px;
+    height: 100%;
+}
+.nav .nav>li>a.router-link-active {
+    color: #ab46bc;
+    font-weight: bold;
+}
+
 .content{
-    margin-left: 200px;
     border: 1px solid rgb(225, 225, 232);
     border-top: 0;
-    min-height:230px;
+    margin-right: 10px;
 }
 .nav>li {
 position: relative;
@@ -51,4 +47,13 @@ color: #999;
 padding-left: 20px;
 font-size: 13px;
 font-weight: 400;
+}
+
+.nav .nav>li>a.disabled{
+    color: #d1d9de;
+    cursor: not-allowed;
+}
+
+.nav,.nav li{
+    background: #fafafa
 }
