--- a/demo/assets/base.css
+++ b/demo/assets/base.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: Arial,Times New Roman, Verdana;
+    font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
     text-decoration:none;
 }
 html, body {
