--- a/demo/assets/base.css
+++ b/demo/assets/base.css
@@ -1,14 +1,23 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
     text-decoration:none;
 }
+
+@font-face {
+    font-family: 'Glyphicons Halflings';
+    src: url('./fonts/glyphicons-halflings-regular.eot');
+    src: url('./fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('./fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('./fonts/glyphicons-halflings-regular.woff') format('woff'), url('./fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('./fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+}
+
 html, body {
-    font-size: 14px;
+    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
+    font-size: 13px;
     border: 0;
     width: 100%;
     height: 100%;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased!important;
 }
 a:visited,a:link{color: #000;}
 
