--- a/demo/assets/base.css
+++ b/demo/assets/base.css
@@ -11,7 +11,7 @@
 }
 
 html, body {
-    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
+    font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
     font-size: 13px;
     border: 0;
     width: 100%;
@@ -19,7 +19,7 @@ html, body {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased!important;
 }
-a:visited,a:link{color: #000;}
+a{color: #000;}
 
 /*Layout*/
 .page {
