--- a/demo/assets/base.css
+++ b/demo/assets/base.css
@@ -20,7 +20,9 @@ html, body {
     -webkit-font-smoothing: antialiased!important;
 }
 a{color: #000;}
-
+button:focus{
+    outline: none;
+}
 /*Layout*/
 .page {
     width: 100%;
