--- a/demo/components/css/DataTables.css
+++ b/demo/components/css/DataTables.css
@@ -20,7 +20,10 @@ div.dataTables_paginate {
 
 div.dataTables_paginate ul.pagination {
 	margin: 2px 0;
-	white-space: nowrap;
+    white-space: nowrap;
+    display: inline-block;
+    padding-left: 0;
+    border-radius: 4px;
 }
 
 @media screen and (max-width: 767px) {
