--- a/demo/components/css/Tables.css
+++ b/demo/components/css/Tables.css
@@ -273,6 +273,7 @@ th {
     line-height: 1.42857143;
     vertical-align: top;
     border-top: 1px solid #ddd;
+    outline: none;
 }
 
 .table td {
@@ -311,4 +312,66 @@ th {
 
 .pagination>li {
     display: inline;
+}
+
+
+.pagination>li>a, .pagination>li>span {
+    position: relative;
+    float: left;
+    padding: 6px 12px;
+    margin-left: -1px;
+    line-height: 1.42857143;
+    color: #758697;
+    text-decoration: none;
+    background-color: #fff;
+    border: 1px solid #ddd;
+}
+
+.pagination>.disabled>a, .pagination>.disabled>a:focus, .pagination>.disabled>a:hover, .pagination>.disabled>span, .pagination>.disabled>span:focus, .pagination>.disabled>span:hover {
+    color: #777;
+    cursor: not-allowed;
+    background-color: #fff;
+    border-color: #ddd;
+}
+
+.pager .disabled>a, .pager .disabled>span, .pager .disabled>a:hover, .pager .disabled>span:hover, .pager .disabled>a:focus, .pager .disabled>span:focus, .pagination .disabled>a, .pagination .disabled>span, .pagination .disabled>a:hover, .pagination .disabled>span:hover, .pagination .disabled>a:focus, .pagination .disabled>span:focus {
+    opacity: .7;
+    border-color: #dcdcdc;
+    box-shadow: none;
+}
+
+
+.pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>a:hover, .pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover {
+    z-index: 3;
+    color: #fff;
+    cursor: default;
+    background-color: #337ab7;
+    border-color: #337ab7;
+}
+
+.pagination>.active>a, .pagination>.active>span, .pagination>.active>a:hover, .pagination>.active>span:hover, .pagination>.active>a:focus, .pagination>.active>span:focus {
+    background-color: #42a5f5;
+    border-color: #42a5f5;
+}
+
+.pagination > li > a:hover,
+.pagination > li > span:hover,
+.pagination > li > a:focus,
+.pagination > li > span:focus {
+  z-index: 2;
+  color: #23527c;
+  background-color: #eee;
+  border-color: #ddd;
+}
+
+.pager li > a:hover,
+.pager li > a:focus,
+.pagination > li a:hover,
+.pagination > li a:focus {
+  background-color: #fff;
+  border-color: #42a5f5;
+  color: #42a5f5;
+  box-shadow: inset 0 0 1px #42a5f5;
+  z-index: 2;
+  transition: border-color, 0.3s;
 }
