--- a/demo/components/css/DataTables.css
+++ b/demo/components/css/DataTables.css
@@ -11,6 +11,9 @@ table.dataTable thead .sorting_desc {
     background: url(https://lastsoup.github.io/Nifty/plugins/datatables/media/images/sort_desc.png) no-repeat center right;
 }
 
+.dataTables_wrapper{
+    position: relative;
+}
 
 div.dataTables_paginate {
 	margin: 0;
@@ -39,13 +42,41 @@ div.dataTables_filter {
     text-align: right;
 }
 
+div.dataTables_filter input {
+    margin-left: 0.5em;
+    display: inline-block;
+    width: auto;
+}
+
 div.dataTables_length label {
     font-weight: normal;
     text-align: left;
     white-space: nowrap;
 }
 
+div.dataTables_processing
+{
+    background-color: #FFFFFF;
+    border: 1px solid #DDDDDD;
+    color: #999999;
+    font-size: 14px;
+    height: 40px;
+    line-height: 40px;
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    width: 250px;
+    margin-left: -125px;
+    text-align: center;
+    z-index: 1;
+}
+
+.table.dataTable tbody tr.selected {
+    background-color: #f2f5ca;
+}
+
 select.input-sm {
+    font-family: inherit;
     height: 30px;
     line-height: 30px;
 }
@@ -54,4 +85,103 @@ label {
     display: inline-block;
     max-width: 100%;
     margin-bottom: 10px;
+}
+
+.dataTables_info{text-align: center;}
+.dataTables_length{float: left;}
+.dataTables_paginate{float: right;}
+
+
+table.dataTable.dtr-inline.collapsed tbody td:first-child,
+table.dataTable.dtr-inline.collapsed tbody th:first-child {
+  position: relative;
+  padding-left: 30px;
+  cursor: pointer;
+}
+table.dataTable.dtr-inline.collapsed tbody td:first-child:before,
+table.dataTable.dtr-inline.collapsed tbody th:first-child:before {
+  top: 8px;
+  left: 4px;
+  height: 16px;
+  width: 16px;
+  display: block;
+  position: absolute;
+  color: white;
+  border: 2px solid white;
+  border-radius: 16px;
+  text-align: center;
+  line-height: 14px;
+  box-shadow: 0 0 3px #444;
+  box-sizing: content-box;
+  content: '+';
+  background-color: #31b131;
+}
+table.dataTable.dtr-inline.collapsed tbody td:first-child.dataTables_empty:before,
+table.dataTable.dtr-inline.collapsed tbody th:first-child.dataTables_empty:before {
+  display: none;
+}
+table.dataTable.dtr-inline.collapsed tbody tr.parent td:first-child:before,
+table.dataTable.dtr-inline.collapsed tbody tr.parent th:first-child:before {
+  content: '-';
+  background-color: #d33333;
+}
+table.dataTable.dtr-inline.collapsed tbody tr.child td:before {
+  display: none;
+}
+table.dataTable.dtr-column tbody td.control,
+table.dataTable.dtr-column tbody th.control {
+  position: relative;
+  cursor: pointer;
+}
+table.dataTable.dtr-column tbody td.control:before,
+table.dataTable.dtr-column tbody th.control:before {
+  top: 50%;
+  left: 50%;
+  height: 16px;
+  width: 16px;
+  margin-top: -10px;
+  margin-left: -10px;
+  display: block;
+  position: absolute;
+  color: white;
+  border: 2px solid white;
+  border-radius: 16px;
+  text-align: center;
+  line-height: 14px;
+  box-shadow: 0 0 3px #444;
+  box-sizing: content-box;
+  content: '+';
+  background-color: #31b131;
+}
+table.dataTable.dtr-column tbody tr.parent td.control:before,
+table.dataTable.dtr-column tbody tr.parent th.control:before {
+  content: '-';
+  background-color: #d33333;
+}
+table.dataTable tr.child {
+  padding: 0.5em 1em;
+}
+table.dataTable tr.child:hover {
+  background: transparent !important;
+}
+table.dataTable tr.child ul {
+  display: inline-block;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+table.dataTable tr.child ul li {
+  border-bottom: 1px solid #efefef;
+  padding: 0.5em 0;
+}
+table.dataTable tr.child ul li:first-child {
+  padding-top: 0;
+}
+table.dataTable tr.child ul li:last-child {
+  border-bottom: none;
+}
+table.dataTable tr.child span.dtr-title {
+  display: inline-block;
+  min-width: 75px;
+  font-weight: bold;
 }
