--- a/demo/components/css/Tables.css
+++ b/demo/components/css/Tables.css
@@ -1,48 +1,3 @@
-.table-responsive {
-    min-height: .01%;
-    overflow-x: auto;
-    color: #758697;
-    border-radius: 0;
-    border: 1px solid #e7ecf3;
-    border-bottom: 1px solid rgba(0,0,0,0.17);
-    background-color: #fff;
-    box-shadow: 0 1px 1px rgba(0,0,0,.05);
-    margin: 30px;
-    padding: 20px;
-}
-
-.pad-btm {
-    padding-bottom: 15px;
-}
-
-.table-responsive .row {
-    margin: 0 -7.5px;
-}
-.table-responsive .row:after, .table-responsive .row:before {
-    display: table;
-    content: " ";
-}
-.col-sm-6 {
-    width: 50%;
-    float: left;
-    position: relative;
-}
-
-.table-responsive .table-toolbar-left,.table-responsive .table-toolbar-right {
-    text-align: center;
-    padding-bottom: 10px;
-}
-
-.table-responsive .table-toolbar-left {
-    float: left;
-    text-align: left;
-}
-
-.table-responsive .table-toolbar-right {
-    text-align: right;
-    right: 10px;
-}
-
 .btn {
     cursor: pointer;
     background-color: transparent;
@@ -125,6 +80,57 @@
   color: #fff;
 }
 
+.btn-primary-basic,
+.btn-primary,
+.btn-primary:focus,
+.btn-primary.disabled:hover,
+.btn-primary:disabled:hover,
+.btn-hover-primary:hover,
+.btn-hover-primary:active,
+.btn-hover-primary.active,
+.btn.btn-active-primary:active,
+.btn.btn-active-primary.active,
+.dropdown.open > .btn.btn-active-primary,
+.btn-group.open .dropdown-toggle.btn.btn-active-primary {
+  background-color: #38a0f4;
+  border-color: #42a5f5;
+  color: #fff;
+}
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary.active,
+.open > .dropdown-toggle.btn-primary {
+  background-color: #1690f3;
+  border-color: #2095f3;
+  color: #fff;
+}
+
+
+.btn-danger-basic,
+.btn-danger,
+.btn-danger:focus,
+.btn-danger.disabled:hover,
+.btn-danger:disabled:hover,
+.btn-hover-danger:hover,
+.btn-hover-danger:active,
+.btn-hover-danger.active,
+.btn.btn-active-danger:active,
+.btn.btn-active-danger.active,
+.dropdown.open > .btn.btn-active-danger,
+.btn-group.open .dropdown-toggle.btn.btn-active-danger {
+  background-color: #ee4a47;
+  border-color: #ef5350;
+  color: #fff;
+}
+.btn-danger:hover,
+.btn-danger:active,
+.btn-danger.active,
+.open > .dropdown-toggle.btn-danger {
+  background-color: #eb2a26;
+  border-color: #ec332f;
+  color: #fff;
+}
+
 .caret {
     display: inline-block;
     width: 0;
@@ -154,6 +160,56 @@
     position: relative;
     float: left;
 }
+
+
+.table-responsive {
+    min-height: .01%;
+    overflow-x: auto;
+    color: #758697;
+    border-radius: 0;
+    border: 1px solid #e7ecf3;
+    border-bottom: 1px solid rgba(0,0,0,0.17);
+    background-color: #fff;
+    box-shadow: 0 1px 1px rgba(0,0,0,.05);
+    margin: 30px;
+    padding: 20px;
+}
+
+.pad-btm {
+    padding-bottom: 15px;
+}
+
+.table-responsive .row {
+    margin: 0;
+}
+.table-responsive .row:after, .table-responsive .row:before {
+    display: table;
+    content: " ";
+}
+.col-sm-6 {
+    width: 50%;
+    float: left;
+    position: relative;
+}
+
+.table-responsive .table-toolbar-left,.table-responsive .table-toolbar-right {
+    text-align: center;
+    padding-bottom: 10px;
+}
+
+.table-responsive .table-toolbar-left {
+    float: left;
+    text-align: left;
+    z-index: 100;
+    position: relative;
+}
+
+.table-responsive .table-toolbar-right {
+    text-align: right;
+    z-index: 100;
+    position: relative;
+}
+
 
 .table-responsive .form-control {
     font-size: 13px;
@@ -310,6 +366,12 @@ th {
     padding: 5px;
 }
 
+table.dataTable thead .sorting, table.dataTable thead .sorting_asc, table.dataTable thead .sorting_desc, table.dataTable thead .sorting_asc_disabled, table.dataTable thead .sorting_desc_disabled {
+    cursor: pointer;
+}
+
+
+
 .pagination>li {
     display: inline;
 }
@@ -375,3 +437,4 @@ th {
   z-index: 2;
   transition: border-color, 0.3s;
 }
+
