--- a/demo/assets/base.css
+++ b/demo/assets/base.css
@@ -11,7 +11,7 @@
 }
 
 html, body {
-    font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+    font-family: 'Open Sans','Glyphicons Halflings','Helvetica Neue',Helvetica,Arial,sans-serif;
     font-size: 13px;
     border: 0;
     width: 100%;
