--- a/js/plugins/dropzone/dropzone.css
+++ b/js/plugins/dropzone/dropzone.css
@@ -399,3 +399,16 @@
         border-left: 6px solid transparent;
         border-right: 6px solid transparent;
         border-bottom: 6px solid #be2626; }
+
+/*附件的样式 Start*/
+.dropzone.form-dropzone{padding: 10px;border-color: rgb(169, 169, 169);background-color: #fff;}
+.dropzone.form-dropzone .dz-preview .dz-image{width: 100px;height: 100px;z-index: 1;}
+.dropzone.form-dropzone .dz-preview .dz-download{ z-index: 21;width: 100%;height: 100%;display: block;cursor: pointer;position: absolute;}
+.dropzone.form-dropzone .dz-preview .dz-remove{position: absolute;width: 100%;}
+
+.dropzone.modal-dropzone{padding: 10px;border-color: rgb(169, 169, 169);background-color: #fff;}
+.dropzone.modal-dropzone .dz-preview{min-height: 50px; }
+.dropzone.modal-dropzone .dz-preview .dz-image{width: 100px;height: 100px;z-index: 1;}
+.dropzone.modal-dropzone .dz-preview .dz-download{ z-index: 21;width: 100%;height: 100%;display: block;cursor: pointer;position: absolute;}
+.dropzone.modal-dropzone .dz-preview .dz-remove{position: absolute;width: 100%;}
+/*附件的样式 Start*/
