--- a/demo/pages/demo/uploader/css/Upload.css
+++ b/demo/pages/demo/uploader/css/Upload.css
@@ -9,9 +9,21 @@ body {
   -webkit-font-smoothing: antialiased !important;
 }
 
-.fl {
-  float: left;
+
+
+a
+{
+    text-decoration: none;
+    color:#333;
 }
+
+a:focus {
+    outline:none;
+    -moz-outline:none;
+}
+
+a img{border: 0;}
+
 
 ul, li {
   margin: 0;
@@ -19,6 +31,11 @@ ul, li {
   list-style: none;
   overflow: hidden;
 }
+
+.fl {
+    float: left;
+}
+  
 
 .t-toolbar{
 border-color: #bbb99d;
@@ -240,3 +257,188 @@ margin: 3px 0 0;
 }
 
 *+html .t-upload-selected { min-width: 100px; }
+
+
+/*头像上传*/
+.layer_edit_avatar * {
+    margin: 0;
+    padding: 0;
+}
+.layer_edit_avatar{*position:relative;width:508px;padding:16px;height: 438px; background: #fff;border: 1px solid #ddd;}
+.layer_edit_avatar .WB_minitab{margin-bottom:16px;}   			
+.layer_edit_avatar .edit_left{width:360px;overflow:hidden;} 	  	
+.layer_edit_avatar .initial_pic{height:360px;overflow:hidden;background:#f2f2f5;margin-bottom:10px;} 	  	
+.layer_edit_avatar .initial_pic .choose_pic{width:360px;height:360px;} 		  	
+.layer_edit_avatar .initial_pic .choose_pic .W_btn_b{margin:140px 0 10px;}
+.layer_edit_avatar .initial_pic .edit_pic{height:360px;overflow:hidden;position:relative;background:#333;}
+.layer_edit_avatar .initial_pic .edit_pic i{width:0;font-size:0;line-height:0;height:360px;}	
+.layer_edit_avatar .edit_right{width:132px;height:360px;overflow:hidden;} 	  	
+.layer_edit_avatar .preview{padding:16px;background:#f2f2f5;} 
+.layer_edit_avatar .preview .tit{margin-bottom:10px;}
+.layer_edit_avatar .preview .avatar{overflow:hidden;margin-bottom:25px;}
+.layer_edit_avatar .preview .avatar .pic_wrap{margin:0 auto 10px;overflow:hidden;}
+.layer_edit_avatar .preview .avatar_180 .pic_wrap{width:180px;height:180px;}    
+.layer_edit_avatar .preview .avatar_100 .pic_wrap{width:100px;height:100px;}
+.layer_edit_avatar .preview .avatar_50 .pic_wrap{width:50px;height:50px;}
+.layer_edit_avatar .preview .avatar_30 .pic_wrap{width:30px;height:30px;}
+.layer_edit_avatar .albums{width:508px;height:370px;outline: none;}
+.layer_edit_avatar .initial_pic .loading_block {
+    width: 360px;
+    height: 197px;
+    padding-top: 163px;
+    text-align: center;
+    background: #000;
+}
+
+.W_fl{ float:left;}
+
+.W_fr {
+  float: right;
+  _display: inline;
+}
+
+.W_loading_big {
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    background-image: url(http://img.t.sinajs.cn/t4/appstyle/vip_v2/images/common/loading_big.png?id=1404211047727);
+    background-image: url(http://img.t.sinajs.cn/t4/appstyle/vip_v2/images/common/loading_big.gif?id=1404211047727)\9;
+    background-repeat: no-repeat;
+    vertical-align: middle;
+    animation: spin 0.8s infinite linear;
+}
+
+#changeTXWindow .t-content{ background-color:#fff;color:#333;}
+.WB_minitab .minitb_lk {
+    display: block;
+    width: 88px;
+    height: 27px;
+    _height: 26px;
+    line-height: 28px;
+    white-space: nowrap;
+    overflow: hidden;
+}
+.W_layer .S_line1, .W_layer .W_btn_prev, .W_layer .W_btn_next, .W_layer .W_btn_b {
+    border-color: #d9d9d9;
+}
+
+.WB_minitab {
+    height: 30px;
+    text-align: center;
+    vertical-align: auto;
+    overflow: hidden;
+}
+
+.WB_minitab .minitb_ul {
+    display: inline-block;
+    border-left-style: solid;
+    border-left-width: 1px;
+    overflow: hidden;
+    font-size: 12px;
+}
+
+.WB_minitab .minitb_item, .WB_minitab .minitb_more {
+    display: inline-block;
+    float: left;
+    height: 28px;
+    border-style: solid;
+    border-width: 1px;
+    border-left: none;
+}
+
+.W_layer .S_bg2, .W_layer .W_btn_b, .W_layer .W_input, .W_layer .SW_fun_bg {
+    background-color: #fff;
+}
+
+.WB_minitab .current .cur_block {
+    display: block;
+}
+
+.WB_minitab .current .minitb_lk {
+    font-weight: bold;
+}
+
+.WB_minitab .cur_block {
+    display: none;
+    background: #fa7d3c;
+    height: 2px;
+    overflow: hidden;
+    margin: 0 -1px 0 -1px;
+}
+.W_btn_b {
+    border-width: 1px;
+    border-style: solid;
+    box-shadow: 0px 1px 2px rgba(0,0,0,0.1);
+    color: #333;
+    background-color: #fff;
+    border-color: #d9d9d9;
+    padding: 0 10px 0 10px;
+    white-space: nowrap;
+    display: inline-block;
+    border-radius: 2px;
+    height: 24px;
+    line-height: 25px;
+    text-decoration: none;
+    font-size: 12px;
+    min-width: 40px;
+    text-align: center;
+    outline: none;
+}
+.W_btn_b .ficon_add {
+    color: #fa7d3c!important;
+        line-height: 11px;
+    overflow: hidden;
+    margin-right: 4px;
+    vertical-align: middle;
+    display: inline-block;
+    -webkit-font-smoothing: antialiased;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.W_layer .W_btn_a 
+{
+    float:none;
+    margin: 0 10px;
+}
+
+.W_tc {
+    text-align: center;
+}
+.W_layer .S_txt2{
+    color: #808080;
+    text-decoration: none;
+}
+
+.W_layer .W_layer_btn {
+    position: relative;
+    min-width: 200px;
+    border-radius: 3px;
+    text-align: center;
+    padding: 10px 0;
+}
+
+.btn_34px {
+    display: inline-block;
+    height: 30px;
+    line-height: 30px;
+    padding: 0 15px;
+    font-size: 14px;
+}
+
+.W_layer .t-dropzone{
+    position: absolute;
+}
+
+.W_layer .t-upload-button
+{
+    background: transparent;
+    border: none;
+    height: 20px;
+    width: 75px;
+    position: absolute;
+    top: -40px;
+    left: 135px;
+}
+
+/*头像上传*/
