--- a/demo/pages/demo/uploader/css/Upload.css
+++ b/demo/pages/demo/uploader/css/Upload.css
@@ -264,7 +264,7 @@ margin: 3px 0 0;
     margin: 0;
     padding: 0;
 }
-.layer_edit_avatar{*position:relative;width:508px;padding:16px;height: 438px; background: #fff;border: 1px solid #ddd;}
+.layer_edit_avatar{position:relative;width:508px;padding:16px;height: 438px; background: #fff;border: 1px solid #ddd;}
 .layer_edit_avatar .WB_minitab{margin-bottom:16px;}   			
 .layer_edit_avatar .edit_left{width:360px;overflow:hidden;} 	  	
 .layer_edit_avatar .initial_pic{height:360px;overflow:hidden;background:#f2f2f5;margin-bottom:10px;} 	  	
@@ -440,5 +440,9 @@ margin: 3px 0 0;
     top: -40px;
     left: 135px;
 }
+
+@keyframes spin {
+    100% { transform: rotate(360deg); }
+  }
 
 /*头像上传*/
