--- a/demo/assets/main.css
+++ b/demo/assets/main.css
@@ -5,6 +5,7 @@ center p{color: #888;}
     border-bottom: 1px solid #ccc;
 }
 .top h1{
+    font-family: "calligraphy";
     float: left;
     margin: 0 10px;
     color: #563d7c;
@@ -13,7 +14,6 @@ center p{color: #888;}
 .top a{
     padding:5px;
     color: #758697;
-    text-shadow: 0 0 4px rgba(0,0,0,.267);
 }
 a.router-link-active{font-weight:700;color: #ab46bc;}
 .nav{   
