--- a/demo/assets/base.css
+++ b/demo/assets/base.css
@@ -15,6 +15,11 @@
     src: url('./fonts/calligraphy.ttf') format('truetype');
 }
 
+@font-face {
+    font-family: 'yuan';
+    src: url('./fonts/yuan.woff') format('woff'),url('./fonts/yuan.woff2') format('woff2');
+}
+
 html, body {
     font-family: 'Open Sans','Glyphicons Halflings','Helvetica Neue',Helvetica,Arial,sans-serif;
     font-size: 13px;
@@ -72,3 +77,17 @@ button:focus{
     overflow: auto;
 }
 
+@font-face {
+    font-family: 'iconfont';  /* project id 1106408 */
+    src: url('//at.alicdn.com/t/font_1106408_tehy5fu6mkr.eot');
+    src: url('//at.alicdn.com/t/font_1106408_tehy5fu6mkr.eot?#iefix') format('embedded-opentype'),
+    url('//at.alicdn.com/t/font_1106408_tehy5fu6mkr.woff2') format('woff2'),
+    url('//at.alicdn.com/t/font_1106408_tehy5fu6mkr.woff') format('woff'),
+    url('//at.alicdn.com/t/font_1106408_tehy5fu6mkr.ttf') format('truetype'),
+    url('//at.alicdn.com/t/font_1106408_tehy5fu6mkr.svg#iconfont') format('svg');
+  }
+  
+  .iconfont{
+    font-family:"iconfont" !important;
+    font-style:normal;
+  }
