--- a/demo/assets/main.css
+++ b/demo/assets/main.css
@@ -6,8 +6,8 @@ center p{color: #888;}
 }
 .top h1{
 
-    /* font-family: "calligraphy"; */
-    font-family: "yuan";
+    font-family: "calligraphy";
+    /* font-family: "yuan"; */
     float: left;
     margin: 0 10px;
     color: #563d7c;
