--- a/demo/pages/demo/uploader/css/Upload.css
+++ b/demo/pages/demo/uploader/css/Upload.css
@@ -69,7 +69,7 @@ button.t-button.t-state-disabled:hover,
 a.t-button.t-state-disabled:hover,
 .t-state-disabled .t-button:hover
 {
-background: #e0e2cb url('http://www.0non0.com/Content/themes/Hay/sprite.png') repeat-x 0 -560px;
+/* background: #e0e2cb url('https://609a.com:3000/Content/themes/Hay/sprite.png') repeat-x 0 -560px; */
 }
 
 .t-button:hover
